# pgfinder-next

./: .gitattributes  .gitignore  Cargo.toml  README.md  demo.cc  justfile  smithereens.rs.cc
crates/consolidation/: Cargo.toml
crates/consolidation/src/: lib.rs
crates/consolidation/src/snapshots/: consolidation__tests__consolidate.snap  consolidation__tests__consolidate_replicates.snap  consolidation__tests__load_replicates.snap
crates/consolidation/tests/data/: E. coli WT_01.csv  E. coli WT_02.csv  E. coli WT_03.csv
crates/muropeptide/: Cargo.toml
crates/muropeptide/benches/: api.rs
crates/muropeptide/data/: fragmentation_rules.kdl  hcd_rules.kdl  polymer_database.kdl  smiles_database.kdl
crates/muropeptide/src/: builder.rs  lib.rs  parser.rs  smiles_database.rs
crates/muropeptide/src/snapshots/: muropeptide__smiles_database__tests__build_smiles_database.snap  muropeptide__smiles_database__tests__dump_isomer_positions.snap  muropeptide__smiles_database__tests__dump_isomer_smiles.snap  muropeptide__smiles_database__tests__muropeptide_to_smiles.snap  muropeptide__smiles_database__tests__parse_smiles_database.snap
crates/muropeptide/tests/data/: polymer_database.kdl
crates/polychem/: Cargo.toml
crates/polychem/benches/: api.rs
crates/polychem/src/: errors.rs  lib.rs  polymerizer.rs  testing_tools.rs
crates/polychem/src/atoms/: atomic_database.rs  charge.rs  chemical_composition.rs  chemical_composition_parser.rs  count.rs  element.rs  errors.rs  mass.rs  mass_number.rs  mod.rs  mz.rs  offset_kind.rs  particle.rs
crates/polychem/src/moieties/: any_mod.rs  bond.rs  functional_group.rs  group_state.rs  modification.rs  named_mod.rs  offset_mod.rs  polymer_database.rs  residue.rs  target.rs
crates/polychem/src/parsers/: chemical_composition.rs  errors.rs  mod.rs  modification.rs  modifications.rs  primitives.rs
crates/polychem/src/polymerizer/: errors.rs  mod.rs
crates/polychem/src/polymers/: any_mod.rs  bond.rs  bond_target.rs  errors.rs  functional_group.rs  group_state.rs  mod.rs  modification.rs  modification_info.rs  named_mod.rs  offset.rs  offset_mod.rs  offset_multiplier.rs  polymer.rs  polymer_database.rs  polymerizer.rs  polymerizer_state.rs  residue.rs  (+1 more)
crates/sifter/: Cargo.toml
crates/sifter/src/: found_fragment.rs  found_precursor.rs  lib.rs  main.rs  ms2_index.rs  named_ion.rs  ordered_floats.rs  peaks.rs  ppm_window.rs  scan_kv.rs  total_float.rs
crates/wasm-shim/: Cargo.toml  README.md
crates/wasm-shim/src/: lib.rs
muropeptide/: Cargo.toml
muropeptide/benches/: api.rs
muropeptide/data/: polymer_database.kdl
muropeptide/src/: lib.rs  parser.rs
nom-miette/: Cargo.toml
nom-miette/src/: lib.rs
polychem/: Cargo.toml  muropeptide_chemistry.kdl
polychem/benches/: api.rs
polychem/src/: atomic_database.rs  chemical_database.rs  chemical_targets.rs  composition_parser.rs  lib.rs  polymer_chemistry.rs  polymerizer.rs  testing_tools.rs
polychem/src/atoms/: atomic_database.rs  chemical_composition.rs  composition_parser.rs  element.rs  mod.rs  particle.rs
polychem/src/polymerizer/: chemical_targets.rs  mod.rs  polymer_chemistry.rs
polychem/src/polymers/: any_mod.rs  bond.rs  chemical_targets.rs  functional_group.rs  group_state.rs  mod.rs  modification.rs  named_mod.rs  offset_mod.rs  polymer_chemistry.rs  polymer_database.rs  residue.rs  target.rs
polychem/src/snapshots/: polychem__atomic_database__tests__decimal_from_bool.snap  polychem__atomic_database__tests__decimal_illegal_type.snap  polychem__atomic_database__tests__decimal_lack_of_precision.snap  polychem__atomic_database__tests__decimal_underflow.snap  polychem__atomic_database__tests__double_uppercase_element_symbol.snap  polychem__atomic_database__tests__element_without_isotopes.snap  polychem__atomic_database__tests__lowercase_element_symbol.snap  polychem__atomic_database__tests__multiple_char_particle_symbol.snap  polychem__atomic_database__tests__parse_default_atomic_database.snap  polychem__atomic_database__tests__parse_default_chemical_database.snap  polychem__atomic_database__tests__three_char_element_symbol.snap  polychem__atomic_database__tests__uppercase_particle_symbol.snap  polychem__chemical_database__tests__decimal_from_bool.snap  polychem__chemical_database__tests__decimal_illegal_type.snap  polychem__chemical_database__tests__decimal_lack_of_precision.snap  polychem__chemical_database__tests__decimal_underflow.snap  polychem__chemical_database__tests__double_uppercase_element_symbol.snap  polychem__chemical_database__tests__element_without_isotopes.snap  polychem__chemical_database__tests__lowercase_element_symbol.snap  polychem__chemical_database__tests__multiple_char_particle_symbol.snap  polychem__chemical_database__tests__parse_default_chemical_database.snap  polychem__chemical_database__tests__three_char_element_symbol.snap  polychem__chemical_database__tests__uppercase_particle_symbol.snap  polychem__composition_parser__tests__chemical_composition-11.snap  polychem__composition_parser__tests__chemical_composition-12.snap  polychem__composition_parser__tests__chemical_composition-13.snap  polychem__composition_parser__tests__chemical_composition-14.snap  polychem__composition_parser__tests__chemical_composition-15.snap  polychem__composition_parser__tests__chemical_composition-2.snap  polychem__composition_parser__tests__chemical_composition-3.snap  polychem__composition_parser__tests__chemical_composition-4.snap  polychem__composition_parser__tests__chemical_composition-5.snap  polychem__composition_parser__tests__chemical_composition-6.snap  polychem__composition_parser__tests__chemical_composition-7.snap  polychem__composition_parser__tests__chemical_composition-8.snap  polychem__composition_parser__tests__chemical_composition-9.snap  polychem__composition_parser__tests__chemical_composition.snap  polychem__composition_parser__tests__composition_errors-10.snap  polychem__composition_parser__tests__composition_errors-11.snap  polychem__composition_parser__tests__composition_errors-12.snap  (+80 more)
polychem/tests/data/: polymer_database.kdl
(+686 files in other folders)
