[package]
name = "smithereens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
crepe = "0.1.8"
polars = "0.36.2"
serde = { version = "1.0.195", features = ["derive"] }
memoize = "0.4.2"
rayon = "1.8.0"
rkyv = "0.7.43"
thiserror = "1.0.56"
miette = { version = "5.10.0", features = ["fancy"] }
knuffel = { git = "https://github.com/TheLostLambda/knuffel.git" }
once_cell = "1.19.0"
itertools = "0.12.0"

[dev-dependencies]
indoc = "2.0.4"
insta = "1.34.0"

[lints.rust]
# FIXME: Uncomment this!
# missing_docs = "warn"
# FIXME: Get rid of this!
dead_code = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
