[package]
name = "pg-pipeline"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/muropeptide",
  "crates/nom-miette",
  "crates/polychem",
  "crates/smithereens",
]
exclude = ["worktrees/"]

# FIXME: Does this actually apply to this base-level crate?
[workspace.lints.rust]
# FIXME: Delete this!
dead_code = "allow"
# FIXME: Uncomment this!
# missing_docs = "warn"

[dependencies]
# miette = { version = "7.2.0", features = ["fancy"] }
miette = { git = "https://github.com/TheLostLambda/miette", features = ["fancy"] }
once_cell = "1.19.0"
polychem = { path = "crates/polychem/" }
rustyline = "14.0.0"

# FIXME: This is just a list of nice libraries, but should eventually be deleted!
# [dependencies]
# petgraph = "0.6.4"
# nom = "7.1.3"
# phf = { version = "0.11.2", features = ["macros"] }
# boomphf = "*" # For perfect minimal hash functions at runtime!
# rust_decimal = "1.33.1"
# rust_decimal_macros = "1.33.1"
# crepe = "0.1.8"
# polars = "0.37.0"
# serde = { version = "1.0.196", features = ["derive"] }
# memoize = "0.4.2"
# rayon = "1.8.1"
# rkyv = "0.7.43"
# thiserror = "1.0.56"
# miette = { git = "https://github.com/TheLostLambda/miette.git", features = ["fancy"] }
# knuffel = { git = "https://github.com/TheLostLambda/knuffel.git" }
# once_cell = "1.19.0"
# itertools = "0.12.1"

# [dev-dependencies]
# indoc = "2.0.4"
# insta = "1.34.0"
