[package]
name = "muropeptide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polychem = { path = "../polychem" }

[lints.rust]
# FIXME: Uncomment this!
# missing_docs = "warn"
# FIXME: Get rid of this!
dead_code = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
# FIXME: Uncomment this!
# cargo = "warn"
