[package]
name = "muropeptide"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { git = "https://github.com/TheLostLambda/miette" }
nom = "7.1.3"
nom-miette = { path = "../nom-miette" }
polychem = { path = "../polychem" }
thiserror = "1.0.57"

[dev-dependencies]
insta = { version = "1.35.0", features = ["redactions", "ron"] }
miette = { git = "https://github.com/TheLostLambda/miette", features = ["fancy"] }
once_cell = "1.19.0"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"

[lints.rust]
# FIXME: Uncomment this!
# missing_docs = "warn"
