[package]
name = "polychem"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
knuffel = { git = "https://github.com/TheLostLambda/knuffel.git" }
miette = { git = "https://github.com/TheLostLambda/miette" }
nom = "7.1.3"
nom-miette = { path = "../nom-miette" }
rust_decimal = "1.33.1"
thiserror = "1.0.56"

[dev-dependencies]
indoc = "2.0.4"
insta = "1.34.0"
miette = { git = "https://github.com/TheLostLambda/miette", features=["fancy"] }
once_cell = "1.19.0"
rust_decimal_macros = "1.33.1"

[lints.rust]
# FIXME: Uncomment this!
# missing_docs = "warn"
# FIXME: Get rid of this!
dead_code = "allow"
