[package]
name = "polychem"
version = "0.1.0"
edition = "2021"

# FIXME: Set up justfile and CI to check direct-minimal-versions
[dependencies]
itertools = "0.12.1"
knuffel = { git = "https://github.com/TheLostLambda/knuffel.git" }
miette = { git = "https://github.com/TheLostLambda/miette" }
nom = "7.1.3"
nom-miette = { path = "../nom-miette" }
rust_decimal = "1.34.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.57"

[dev-dependencies]
divan = "0.1.14"
indoc = "2.0.4"
insta = { version = "1.35.0", features = ["redactions", "ron"] }
miette = { git = "https://github.com/TheLostLambda/miette", features = ["fancy"] }
once_cell = "1.19.0"
rust_decimal_macros = "1.34.2"

[[bench]]
name = "api"
harness = false

[lints.rust]
# FIXME: Uncomment this!
# missing_docs = "warn"
# FIXME: Get rid of this!
dead_code = "allow"
