[package]
name = "consolidation"
version = "0.1.0"
edition = "2024"

[dependencies.polars]
version = "0.46.0"
default-features = false
features = [
  "abs",
  "csv",
  "dtype-struct",
  "lazy",
  "regex",
  "round_series",
  "strings",
]

[lints]
workspace = true

[dev-dependencies]
insta = "1.43.2"
