[package]
name = "muropeptide"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
# miette = "7.2.0"
knuffel = { git = "https://github.com/TheLostLambda/knus.git", branch = "tll-fork" }
miette = { git = "https://github.com/TheLostLambda/miette", branch = "tll-fork" }
nom = "7.0.0"
nom-miette = { path = "../nom-miette" }
polychem = { path = "../polychem" }
smithereens = { path = "../smithereens" }
thiserror = "1.0.59"
ahash = "0.8.11"
regex = "1.11.1"

[dev-dependencies]
divan = "0.1.14"
insta = { version = "1.42.1", features = ["redactions", "ron"] }
# miette = { version = "7.2.0", features = ["fancy"] }
miette = { git = "https://github.com/TheLostLambda/miette", branch = "tll-fork", features = ["fancy"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.217", features = ["derive"] }

[[bench]]
name = "api"
harness = false

[lints]
workspace = true
