[package]
name = "muropeptide"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
# miette = "7.2.0"
knuffel = { git = "https://github.com/TheLostLambda/knus.git", branch = "tll-fork" }
miette = { git = "https://github.com/TheLostLambda/miette", branch = "tll-fork" }
nom = "7.1.3"
nom-miette = { path = "../nom-miette" }
polychem = { path = "../polychem" }
smithereens = { path = "../smithereens" }
thiserror = "2.0.12"
ahash = "0.8.12"
regex = "1.11.1"

[dev-dependencies]
divan = "0.1.21"
insta = { version = "1.43.2", features = ["redactions", "ron"] }
# miette = { version = "7.2.0", features = ["fancy"] }
miette = { git = "https://github.com/TheLostLambda/miette", branch = "tll-fork", features = ["fancy"] }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }

[[bench]]
name = "api"
harness = false

[lints]
workspace = true
