[package]
name = "polychem"
version = "0.1.0"
edition = "2021"

# FIXME: Set up justfile and CI to check direct-minimal-versions
[dependencies]
ahash = "0.8.11"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.12.1"
knuffel = { git = "https://github.com/TheLostLambda/knuffel.git" }
# miette = "7.2.0"
miette = { git = "https://github.com/TheLostLambda/miette" }
nom = "7.1.3"
nom-miette = { path = "../nom-miette" }
rust_decimal = "1.34.3"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1.0"
thiserror = "1.0.58"

[dev-dependencies]
divan = "0.1.14"
indoc = "2.0.4"
insta = { version = "1.36.1", features = ["filters", "redactions", "ron"] }
miette = { git = "https://github.com/TheLostLambda/miette", features = ["fancy"] }
# miette = { version = "7.2.0", features = ["fancy"] }
once_cell = "1.19.0"
rust_decimal_macros = "1.34.2"

[[bench]]
name = "api"
harness = false

[lints]
workspace = true
