[package]
name = "polychem"
version = "0.1.0"
edition = "2024"

# FIXME: Set up justfile and CI to check direct-minimal-versions
[dependencies]
ahash = "0.8.11"
derive_more = { version = "1.0.0", features = ["full"] }
getrandom = { version = "0.2.14", features = ["js"] }
itertools = "0.13.0"
knuffel = { git = "https://github.com/TheLostLambda/knus.git", branch = "tll-fork" }
# miette = "7.2.0"
miette = { git = "https://github.com/TheLostLambda/miette" }
nom = "7.1.3"
nom-miette = { path = "../nom-miette" }
rust_decimal = "1.36.0"
serde = { version = "1.0.198", features = ["derive"] }
static_assertions = "1.1.0"
thiserror = "1.0.59"

[dev-dependencies]
divan = "0.1.14"
indoc = "2.0.5"
insta = { version = "1.38.0", features = ["filters", "redactions", "ron"] }
miette = { git = "https://github.com/TheLostLambda/miette", features = ["fancy"] }
# miette = { version = "7.2.0", features = ["fancy"] }
once_cell = "1.19.0"
rust_decimal_macros = "1.34.2"

[[bench]]
name = "api"
harness = false

[lints]
workspace = true
