[package]
name = "sifter"
version = "0.1.0"
edition = "2024"

[dependencies]
mzdata = "0.58.0"
# FIXME: https://github.com/pola-rs/polars/issues/24208
planus = "=1.1.1"

# FIXME: Need to file an issue complaining that they broke WASM support (again...)
[dependencies.polars]
version = "0.46.0"
default-features = false
features = [
  "csv",
  "lazy",
  # FIXME: Remove this before release! Only used for debugging during development!
  "fmt_no_tty",
]

[lints]
workspace = true

[dev-dependencies]
# TODO: Move back to a crates.io release once my changes are out!
assert_float_eq = { git = "https://github.com/Alexhuszagh/assert_float_eq.git" }
