[package]
name = "sifter"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false }
mzdata = { version = "0.60.3", features = ["mzml", "zlib-ng-compat"], default-features = false }
ordered-float = { version = "5.1.0", default-features = false }
# FIXME: https://github.com/pola-rs/polars/issues/24208
planus = "=1.1.1"
rayon = "1.11.0"

# FIXME: Need to file an issue complaining that they broke WASM support (again...)
[dependencies.polars]
version = "0.46.0"
default-features = false
features = [
  "csv",
  "lazy",
  # FIXME: Remove this before release! Only used for debugging during development!
  "fmt_no_tty",
]

[lints]
workspace = true

[dev-dependencies]
assert_float_eq = "1.2.0"
insta = "1.43.2"
