[package]
name = "wasm-shim"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
muropeptide = { path = "../muropeptide" }
polychem = { path = "../polychem" }
smithereens = { path = "../smithereens" }
console_error_panic_hook = "0.1.7"
rust_decimal = "1.36.0"

[lints]
workspace = true
